--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -139,7 +139,7 @@
             <div class="col-6">
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label class="mandatory">Interest Rate</label>
+                        <label class="mandatory">Interest Rate% (p.m.)</label>
                     </div>
                     <div class="col-7">
                         <input type="number" class="form-control" formControlName="interestRate" placeholder="00%"
@@ -214,11 +214,32 @@
                                     <th scope="col" style="width: 50%" class="rating-cce">Interest Amount</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <!-- <tbody>
                                 <tr *ngFor="let date of dateOfPayment;index as idx">
                                     <td>{{date | date :'mediumDate'}}</td>
                                     <td [attr.rowspan]="colJoin" *ngIf="idx%colJoin == 0 || colJoin == null">
                                         {{intrestAmount | currency : 'INR'}}</td>
+                                </tr>
+                            </tbody> -->
+                            <tbody *ngIf="dateOfPayment.length%colJoin == 0 || colJoin == null">
+                                <tr *ngFor="let date of dateOfPayment;index as idx; last as last">
+                                    <td>{{date.key | date :'mediumDate'}}</td>
+
+                                    <td [attr.rowspan]="colJoin" *ngIf="(idx%colJoin == 0 || colJoin == null)">
+                                        {{intrestAmount | currency : 'INR'}}</td>
+
+                                </tr>
+                            </tbody>
+                            <tbody *ngIf="dateOfPayment.length%colJoin != 0 && colJoin !== null">
+                                <tr *ngFor="let date of dateOfPayment;index as idx; last as last">
+                                    <td>{{date.key | date :'mediumDate'}}</td>
+                                    <!-- <td>{{idx%colJoin == 0}}{{colJoin == null}}{{dateOfPayment.length%colJoin < dateOfPayment.length-idx}} {{dateOfPayment.length%colJoin}}{{dateOfPayment.length-idx}}</td> -->
+                                    <td [attr.rowspan]="colJoin"
+                                        *ngIf="(idx%colJoin == 0 || colJoin == null) && (dateOfPayment.length%colJoin < dateOfPayment.length-idx)">
+                                        {{intrestAmount | currency : 'INR'}}</td>
+                                    <td *ngIf="(dateOfPayment.length%colJoin >= dateOfPayment.length-idx)">
+                                        {{intrestAmount / colJoin | currency : 'INR'}}</td>
+
                                 </tr>
                             </tbody>
                         </table>
