--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/sub-category/sub-category-add/sub-category-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/sub-category/sub-category-add/sub-category-add.component.html
@@ -27,7 +27,7 @@
                                     [class.isError]="controls.categoryId.touched && controls.categoryId.invalid">
                                     <option value="" [selected]="true" [disabled]="true">Select Category</option>
                                     <option *ngFor="let item of category" [value]="item?.id">
-                                        {{item?.categoryName}}
+                                        {{item?.categoryName | titlecase}}
                                     </option>
                                 </select>
                                 <mat-error *ngIf="controls.categoryId.touched && controls.categoryId.errors?.required">
