--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-banks/user-banks.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-banks/user-banks.component.html
@@ -29,7 +29,7 @@
                                     </div>
                                     <div class="col-7">
                                         <input type="text" class="form-control" formControlName="bankBranchName"
-                                            placeholder="Enter Bank Name"
+                                            placeholder="Enter Branch Name"
                                             [class.isError]="controls.bankBranchName.touched && controls.bankBranchName.invalid" />
                                         <mat-error
                                             *ngIf="controls.bankBranchName.errors?.required && controls.bankBranchName.touched">
