--- a/gold-admin-frontend/src/app/views/pages/loan-management/packets/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/packets/upload-packets/upload-packets.component.html
@@ -8,6 +8,9 @@
                 <img class="packets" [src]="packet.controls.emptyPacketWithNoOrnament.value" *ngIf="packet.controls.emptyPacketWithNoOrnament.value">
                 <label class="text-center w-100 font-weight-500 pacekts-label text-gray">Empty Packets with No
                     Ornaments</label>
+                    <div>
+                        <mat-error *ngIf="packet.controls.emptyPacketWithNoOrnament.touched && packet.controls.emptyPacketWithNoOrnament.invalid">Field Required</mat-error>
+                    </div>
                 <input type="file" class="d-none" #emptyPacketWithNoOrnament (change)="uploadFile(idx,'emptyPacketWithNoOrnament',$event)">
             </div>
             <div class="col-3">
@@ -17,6 +20,9 @@
                 <img class="packets" [src]="packet.controls.packetWithAllOrnaments.value" *ngIf="packet.controls.packetWithAllOrnaments.value">
                 <label class="text-center w-100 font-weight-500 pacekts-label text-gray">Empty Packets with All
                     Ornaments</label>
+                    <div>
+                        <mat-error *ngIf="packet.controls.packetWithAllOrnaments.touched && packet.controls.packetWithAllOrnaments.invalid">Field Required</mat-error>
+                    </div>
                 <input type="file" class="d-none" #packetWithAllOrnaments (change)="uploadFile(idx,'packetWithAllOrnaments',$event)">
             </div>
             <div class="col-3">
@@ -26,6 +32,9 @@
                 <img class="packets" [src]="packet.controls.packetWithSealing.value" *ngIf="packet.controls.packetWithSealing.value" (click)="emptyPacketWithNoOrnament.click()">
                 <label class="text-center w-100 font-weight-500 pacekts-label text-gray">Empty Packets with
                     packetWithSealing</label>
+                    <div>
+                        <mat-error *ngIf="packet.controls.packetWithSealing.touched && packet.controls.packetWithSealing.invalid">Field Required</mat-error>
+                    </div>
                 <input type="file" class="d-none" #packetWithSealing (change)="uploadFile(idx,'packetWithSealing',$event)">
 
             </div>
@@ -36,6 +45,9 @@
                 <img class="packets" [src]="packet.controls.packetWithWeight.value" *ngIf="packet.controls.packetWithWeight.value">
                 <label class="text-center w-100 font-weight-500 pacekts-label text-gray">Empty Packets with
                     Weight</label>
+                    <div>
+                        <mat-error *ngIf="packet.controls.packetWithWeight.touched && packet.controls.packetWithWeight.invalid">Field Required</mat-error>
+                    </div>
                 <input type="file" class="d-none" #packetWithWeight (change)="uploadFile(idx,'packetWithWeight',$event)">
 
             </div>
