bhushan: interest summation

--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-interest-amount/final-interest-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-interest-amount/final-interest-amount.component.html
@@ -215,6 +215,13 @@
 
                                 </tr>
                             </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td>Total Amount</td>
+                                    <td *ngIf="colJoin != null">{{(intrestAmount/colJoin) * dateOfPayment.length | currency : 'INR'}}</td>
+                                    <td *ngIf="colJoin == null">{{(intrestAmount) * dateOfPayment.length | currency : 'INR'}}</td>
+                                </tr>
+                            </tfoot>
                         </table>
                     </div>
 
