merchnat initial edit

--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/user-details/user-details.component.html
@@ -140,7 +140,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row kt-margin-t-15">
+                    <div class="row kt-margin-t-15" *ngIf="url == 'add-merchant'">
                         <div class="col-4 align-self-center">
                             <label class="font-weight-500 text-color">Merchant Initial</label>
                         </div>
