--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
@@ -109,7 +109,7 @@
                                     class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
                                     (click)="preview(ornament.controls.weightMachineZeroWeight.value,idx)">View
                                     Image</label>
-                                <mat-error
+                                <mat-error 
                                     *ngIf="ornament.controls.weightMachineZeroWeight.touched && ornament.controls.weightMachineZeroWeight.invalid">
                                     <span *ngIf="ornament.controls.weightMachineZeroWeight.errors?.required">Upload
                                         Image</span>
@@ -401,7 +401,7 @@
                         (click)="removeImage('ornamentImage',idx)">Remove</label>
                 </div>
                 <div>
-                    <mat-error
+                    <mat-error class="text-center"
                         *ngIf="ornament.controls.ornamentImage.touched && ornament.controls.ornamentImage.invalid">
                         <span *ngIf="ornament.controls.ornamentImage.errors?.required">Upload Image</span>
                     </mat-error>
