--- a/gold-admin-frontend/src/app/views/pages/loan-management/packets/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/packets/upload-packets/upload-packets.component.html
@@ -1,7 +1,7 @@
 <mat-tab-group [formGroup]="packetsForm">
     <mat-tab  formArrayName="packetsArray"  label="{{packet.controls.packetsName.value | uppercase}}" *ngFor="let packet of packets.controls;index as idx">
         <div class="row" [formGroupName]="idx">
-            <div class="col-3">
+            <div class="col-3 position-relative">
                 <div class="img-container packets" *ngIf="!packet.controls.emptyPacketWithNoOrnament.value" (click)="emptyPacketWithNoOrnament.click()">
                     <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
                 </div>
@@ -13,24 +13,24 @@
                     </div>
                 <input type="file" class="d-none" #emptyPacketWithNoOrnament (change)="uploadFile(idx,'emptyPacketWithNoOrnament',$event)">
             </div>
-            <div class="col-3">
+            <div class="col-3 position-relative">
                 <div class="img-container packets" *ngIf="!packet.controls.packetWithAllOrnaments.value" (click)="packetWithAllOrnaments.click()">
                     <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
                 </div>
                 <img class="packets" [src]="packet.controls.packetWithAllOrnaments.value" *ngIf="packet.controls.packetWithAllOrnaments.value">
-                <label class="text-center w-100 font-weight-500 pacekts-label text-gray">Empty Packets with All
+                <label class="text-center w-100 font-weight-500 pacekts-label text-gray"> Packets with All
                     Ornaments</label>
                     <div>
                         <mat-error *ngIf="packet.controls.packetWithAllOrnaments.touched && packet.controls.packetWithAllOrnaments.invalid">Field Required</mat-error>
                     </div>
                 <input type="file" class="d-none" #packetWithAllOrnaments (change)="uploadFile(idx,'packetWithAllOrnaments',$event)">
             </div>
-            <div class="col-3">
+            <div class="col-3 position-relative">
                 <div class="img-container packets" *ngIf="!packet.controls.packetWithSealing.value" (click)="packetWithSealing.click()">
                     <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
                 </div>
                 <img class="packets" [src]="packet.controls.packetWithSealing.value" *ngIf="packet.controls.packetWithSealing.value" (click)="emptyPacketWithNoOrnament.click()">
-                <label class="text-center w-100 font-weight-500 pacekts-label text-gray">Empty Packets with
+                <label class="text-center w-100 font-weight-500 pacekts-label text-gray"> Packets with
                     packetWithSealing</label>
                     <div>
                         <mat-error *ngIf="packet.controls.packetWithSealing.touched && packet.controls.packetWithSealing.invalid">Field Required</mat-error>
@@ -38,12 +38,14 @@
                 <input type="file" class="d-none" #packetWithSealing (change)="uploadFile(idx,'packetWithSealing',$event)">
 
             </div>
-            <div class="col-3">
+            <div class="col-3 position-relative">
                 <div class="img-container packets" *ngIf="!packet.controls.packetWithWeight.value" (click)="packetWithWeight.click()">
                     <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
                 </div>
-                <img class="packets" [src]="packet.controls.packetWithWeight.value" *ngIf="packet.controls.packetWithWeight.value">
-                <label class="text-center w-100 font-weight-500 pacekts-label text-gray">Empty Packets with
+                <span class="pos-action">
+                    <img class="packets" [src]="packet.controls.packetWithWeight.value" *ngIf="packet.controls.packetWithWeight.value">
+                </span>
+                <label class="text-center w-100 font-weight-500 pacekts-label text-gray"> Packets with
                     Weight</label>
                     <div>
                         <mat-error *ngIf="packet.controls.packetWithWeight.touched && packet.controls.packetWithWeight.invalid">Field Required</mat-error>
